<resources>
    <string name="app_name">Color My Views</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>

    <string name="button_color_red">RED</string>
    <string name="button_color_green">GREEN</string>
    <string name="button_color_yellow">YELLOW</string>
    <string name="how_to_play">How to Play?</string>
    <string name="tap_the_screen_and_buttons">Tap the screen and buttons</string>
</resources>
