<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="match_parent"
        tools:context=".MainActivity" android:layout_width="match_parent" android:id="@+id/layout_constraint">

    <TextView
            android:layout_width="0dp"
            android:id="@+id/tv_boxone"
            android:layout_height="wrap_content"
            android:text="@string/box_one"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            style="@style/WhiteBox"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"

            tools:fontFamily="@font/roboto_medium"
    />
    <TextView
            android:text="@string/box_two"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:id="@+id/tv_boxtwo" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_boxone" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" style="@style/WhiteBox"/>
    <TextView
            android:text="@string/box_three"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_boxthree" style="@style/WhiteBox"
            app:layout_constraintBottom_toTopOf="@+id/tv_boxfour"
            app:layout_constraintTop_toTopOf="@+id/tv_boxtwo" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/tv_boxtwo"
            app:layout_constraintVertical_chainStyle="packed" android:layout_marginStart="16dp"/>
    <TextView
            android:text="@string/box_four"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_boxfour" style="@style/WhiteBox"
            app:layout_constraintTop_toBottomOf="@+id/tv_boxthree"
            app:layout_constraintBottom_toTopOf="@+id/tv_boxfive" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" app:layout_constraintStart_toEndOf="@+id/tv_boxtwo"
            android:layout_marginStart="16dp" android:layout_marginBottom="16dp" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/box_five"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_boxfive" style="@style/WhiteBox"
            app:layout_constraintBottom_toBottomOf="@+id/tv_boxtwo"
            app:layout_constraintTop_toBottomOf="@+id/tv_boxfour"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/tv_boxtwo" android:layout_marginStart="16dp"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_label" android:fontFamily="@font/roboto_medium"
            android:textSize="24sp" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:text="@string/how_to_play" app:layout_constraintBaseline_toBaselineOf="@+id/tv_info"/>
    <TextView
            android:text="@string/tap_the_screen_and_buttons"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_info" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/tv_label" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_boxtwo" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.607"/>
    <Button
            android:text="@string/button_color_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_red"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_yellow"
            android:layout_marginLeft="16dp"/>
    <Button
            android:text="@string/button_color_yellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_yellow" app:layout_constraintStart_toEndOf="@+id/btn_red"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/btn_green"
            android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/tv_info" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="1.0"/>
    <Button
            android:text="@string/button_color_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_green"
            app:layout_constraintStart_toEndOf="@+id/btn_yellow" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5" android:layout_marginRight="16dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_yellow"/>

</android.support.constraint.ConstraintLayout>